--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,7 @@ app {
   spark {
     master = "local[*]"
     streaming {
-      starting_offsets = "earliest"
+      starting_offsets = "latest"
       max_offsets_per_trigger = "10240"
       trigger_processing_time_ms = 30000
     }
@@ -10,7 +10,7 @@ app {
 
   kafka {
     bootstrap_servers = "172.16.25.27:9092,172.16.25.28:9092,172.16.25.29:9092"
-    topic_name = "topic_mediabid"
+    topic_name = "topic_mediabid_dev"
   }
 
   mysql {
@@ -19,8 +19,8 @@ app {
     pwd = "tomcat2008"
 
     dest_table_name = "mad_report_media_mem"
-    batch_size = 64
+    batch_size = 16
   }
 
-  log_type = "MEDIABID"  // eg. MEDIABID, DSPBID, IMPRESSION, CLICK, WINNOTICE
+  log_type = "MEDIABID"  // eg. MEDIABID, DSPBID, IMPRESSION, CLICK
 }
